--- a/kid-to-adult-ai-angular-app/src/app/app.html
+++ b/kid-to-adult-ai-angular-app/src/app/app.html
@@ -32,7 +32,7 @@
           mat-raised-button 
           color="primary" 
           (click)="startGeneration()"
-          [disabled]="isLoading">
+          [disabled]="isLoading" style="border: 1px solid #000000;">
           <mat-icon>auto_awesome</mat-icon>
           Generate Adult Version
         </button>
